report test coverage, pitest and other final changes

--- a/reports/pit/com.l13gr03.pets.model.game.battle.bots/CPU.java.html
+++ b/reports/pit/com.l13gr03.pets.model.game.battle.bots/CPU.java.html
@@ -686,7 +686,7 @@
 
 
 <tr>
-<td class='covered'>
+<td class='uncovered'>
 <a name='org.pitest.mutationtest.report.html.SourceFile@7fd3197b_45'/>
 45
 </td>
@@ -697,7 +697,7 @@
 </span>
 </span>
 </td>
-<td class='covered'><pre><span  class=''>             p1 = new LavaLurker(&#34;Nekizal&#34;);</span></pre></td></tr>
+<td class='uncovered'><pre><span  class=''>             p1 = new LavaLurker(&#34;Nekizal&#34;);</span></pre></td></tr>
 
 
 <tr>
@@ -855,7 +855,7 @@
 
 
 <tr>
-<td class='covered'>
+<td class='uncovered'>
 <a name='org.pitest.mutationtest.report.html.SourceFile@7fd3197b_56'/>
 56
 </td>
@@ -866,7 +866,7 @@
 </span>
 </span>
 </td>
-<td class='covered'><pre><span  class=''>            p2 = new AquaticAlly(&#34;Blastem&#34;);</span></pre></td></tr>
+<td class='uncovered'><pre><span  class=''>            p2 = new AquaticAlly(&#34;Blastem&#34;);</span></pre></td></tr>
 
 
 <tr>
@@ -949,7 +949,7 @@
 
 
 <tr>
-<td class='covered'>
+<td class='uncovered'>
 <a name='org.pitest.mutationtest.report.html.SourceFile@7fd3197b_62'/>
 62
 </td>
@@ -960,7 +960,7 @@
 </span>
 </span>
 </td>
-<td class='covered'><pre><span  class=''>             p2 = new CelestialGuardian(&#34;Doxxis&#34;);</span></pre></td></tr>
+<td class='uncovered'><pre><span  class=''>             p2 = new CelestialGuardian(&#34;Doxxis&#34;);</span></pre></td></tr>
 
 
 <tr>
@@ -1338,7 +1338,7 @@
 
 
 <tr>
-<td class='covered'>
+<td class='uncovered'>
 <a name='org.pitest.mutationtest.report.html.SourceFile@7fd3197b_87'/>
 87
 </td>
@@ -1349,7 +1349,7 @@
 </span>
 </span>
 </td>
-<td class='covered'><pre><span  class=''>             p3 = new CyberneticCompanion(&#34;Metagrosso&#34;);</span></pre></td></tr>
+<td class='uncovered'><pre><span  class=''>             p3 = new CyberneticCompanion(&#34;Metagrosso&#34;);</span></pre></td></tr>
 
 
 <tr>
@@ -1432,7 +1432,7 @@
 
 
 <tr>
-<td class='covered'>
+<td class='uncovered'>
 <a name='org.pitest.mutationtest.report.html.SourceFile@7fd3197b_93'/>
 93
 </td>
@@ -1443,7 +1443,7 @@
 </span>
 </span>
 </td>
-<td class='covered'><pre><span  class=''>             p3 = new ShadowSpecter(&#34;Nocturnyx&#34;);</span></pre></td></tr>
+<td class='uncovered'><pre><span  class=''>             p3 = new ShadowSpecter(&#34;Nocturnyx&#34;);</span></pre></td></tr>
 
 
 <tr>
@@ -1477,7 +1477,7 @@
 
 
 <tr>
-<td class='uncovered'>
+<td class='covered'>
 <a name='org.pitest.mutationtest.report.html.SourceFile@7fd3197b_96'/>
 96
 </td>
@@ -1488,7 +1488,7 @@
 </span>
 </span>
 </td>
-<td class='uncovered'><pre><span  class=''>             p3 = new StoneGolem(&#34;Big7&#34;);</span></pre></td></tr>
+<td class='covered'><pre><span  class=''>             p3 = new StoneGolem(&#34;Big7&#34;);</span></pre></td></tr>
 
 
 <tr>
@@ -2015,7 +2015,7 @@
 
 <h2>Tests examined</h2>
 <ul>
-<li>com.l13gr03.pets.model.CPU.CPUTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.model.CPU.CPUTest]/[method:testMediumCPU()] (26 ms)</li><li>com.l13gr03.pets.model.CPU.CPUTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.model.CPU.CPUTest]/[method:testCPU()] (3 ms)</li><li>com.l13gr03.pets.model.CPU.CPUTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.model.CPU.CPUTest]/[method:testHardCPU()] (3 ms)</li>
+<li>com.l13gr03.pets.model.CPU.CPUTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.model.CPU.CPUTest]/[method:testMediumCPU()] (14 ms)</li><li>com.l13gr03.pets.model.CPU.CPUTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.model.CPU.CPUTest]/[method:testCPU()] (2 ms)</li><li>com.l13gr03.pets.model.CPU.CPUTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.model.CPU.CPUTest]/[method:testHardCPU()] (1 ms)</li>
 </ul>
 
 <br/>
