--- a/reports/pit/com.l13gr03.pets.utils.random/ThreeRandomizer.java.html
+++ b/reports/pit/com.l13gr03.pets.utils.random/ThreeRandomizer.java.html
@@ -303,7 +303,7 @@
 
 
 <tr>
-<td class='covered'>
+<td class='uncovered'>
 <a name='org.pitest.mutationtest.report.html.SourceFile@5edce7da_20'/>
 20
 </td>
@@ -314,7 +314,7 @@
 </span>
 </span>
 </td>
-<td class='covered'><pre><span  class=''>            j = r.nextInt(1, 8);</span></pre></td></tr>
+<td class='uncovered'><pre><span  class=''>            j = r.nextInt(1, 8);</span></pre></td></tr>
 
 
 <tr>
@@ -381,7 +381,7 @@
 
 
 <tr>
-<td class='uncovered'>
+<td class='covered'>
 <a name='org.pitest.mutationtest.report.html.SourceFile@5edce7da_25'/>
 25
 </td>
@@ -392,7 +392,7 @@
 </span>
 </span>
 </td>
-<td class='uncovered'><pre><span  class=''>            k = r.nextInt(1, 8);</span></pre></td></tr>
+<td class='covered'><pre><span  class=''>            k = r.nextInt(1, 8);</span></pre></td></tr>
 
 
 <tr>
@@ -711,7 +711,7 @@
 
 <h2>Tests examined</h2>
 <ul>
-<li>com.l13gr03.pets.utils.random.ThreeRandomizerTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.utils.random.ThreeRandomizerTest]/[method:oneInTenTest()] (1 ms)</li><li>com.l13gr03.pets.model.CPU.CPUTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.model.CPU.CPUTest]/[method:testMediumCPU()] (26 ms)</li><li>com.l13gr03.pets.utils.random.ThreeRandomizerTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.utils.random.ThreeRandomizerTest]/[method:oneInFiftyTest()] (0 ms)</li><li>com.l13gr03.pets.model.CPU.CPUTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.model.CPU.CPUTest]/[method:testCPU()] (3 ms)</li><li>com.l13gr03.pets.utils.random.ThreeRandomizerTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.utils.random.ThreeRandomizerTest]/[method:generate3Test()] (1 ms)</li><li>com.l13gr03.pets.model.CPU.CPUTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.model.CPU.CPUTest]/[method:testHardCPU()] (3 ms)</li><li>com.l13gr03.pets.utils.random.ThreeRandomizerTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.utils.random.ThreeRandomizerTest]/[method:decideTest()] (1 ms)</li>
+<li>com.l13gr03.pets.utils.random.ThreeRandomizerTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.utils.random.ThreeRandomizerTest]/[method:oneInTenTest()] (1 ms)</li><li>com.l13gr03.pets.model.CPU.CPUTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.model.CPU.CPUTest]/[method:testMediumCPU()] (14 ms)</li><li>com.l13gr03.pets.utils.random.ThreeRandomizerTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.utils.random.ThreeRandomizerTest]/[method:oneInFiftyTest()] (0 ms)</li><li>com.l13gr03.pets.model.CPU.CPUTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.model.CPU.CPUTest]/[method:testCPU()] (2 ms)</li><li>com.l13gr03.pets.utils.random.ThreeRandomizerTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.utils.random.ThreeRandomizerTest]/[method:generate3Test()] (0 ms)</li><li>com.l13gr03.pets.model.CPU.CPUTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.model.CPU.CPUTest]/[method:testHardCPU()] (1 ms)</li><li>com.l13gr03.pets.utils.random.ThreeRandomizerTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.utils.random.ThreeRandomizerTest]/[method:decideTest()] (1 ms)</li>
 </ul>
 
 <br/>
