--- a/reports/pit/com.l13gr03.pets.model.game.entities.species/LavaLurker.java.html
+++ b/reports/pit/com.l13gr03.pets.model.game.entities.species/LavaLurker.java.html
@@ -699,7 +699,7 @@
 
 <a name='grouporg.pitest.mutationtest.report.html.SourceFile@58ca1cad_21'/> 
 
-<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>&#60;init&#62;<br/><b>Killed by : </b>com.l13gr03.pets.utils.calculator.CalculatorTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.utils.calculator.CalculatorTest]/[method:testSpecialDamageCalculatorIfAttackTypeIsDifferent()]</span></span> removed call to com/l13gr03/pets/model/game/entities/Entity::setStats &rarr; KILLED</p> 
+<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>&#60;init&#62;<br/><b>Killed by : </b>com.l13gr03.pets.utils.calculator.CalculatorTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.utils.calculator.CalculatorTest]/[method:testSpecialDamageCalculator()]</span></span> removed call to com/l13gr03/pets/model/game/entities/Entity::setStats &rarr; KILLED</p> 
 </td>
 </tr>
 <tr>
@@ -794,7 +794,7 @@
 
 <h2>Tests examined</h2>
 <ul>
-<li>com.l13gr03.pets.utils.calculator.CalculatorTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.utils.calculator.CalculatorTest]/[method:testSpecialDamageCalculatorIfAttackTypeIsDifferent()] (0 ms)</li><li>com.l13gr03.pets.model.CPU.CPUTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.model.CPU.CPUTest]/[method:testCPU()] (3 ms)</li><li>com.l13gr03.pets.model.CPU.CPUTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.model.CPU.CPUTest]/[method:testEasyCPU()] (2 ms)</li><li>com.l13gr03.pets.model.CPU.CPUTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.model.CPU.CPUTest]/[method:testHardCPU()] (3 ms)</li><li>com.l13gr03.pets.model.game.entities.EntityTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.model.game.entities.EntityTest]/[method:testLavaLurker()] (1 ms)</li><li>com.l13gr03.pets.utils.calculator.CalculatorTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.utils.calculator.CalculatorTest]/[method:testSpecialDamageCalculator()] (0 ms)</li>
+<li>com.l13gr03.pets.utils.calculator.CalculatorTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.utils.calculator.CalculatorTest]/[method:testSpecialDamageCalculatorIfAttackTypeIsDifferent()] (1 ms)</li><li>com.l13gr03.pets.model.CPU.CPUTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.model.CPU.CPUTest]/[method:testMediumCPU()] (14 ms)</li><li>com.l13gr03.pets.model.CPU.CPUTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.model.CPU.CPUTest]/[method:testEasyCPU()] (1 ms)</li><li>com.l13gr03.pets.model.CPU.CPUTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.model.CPU.CPUTest]/[method:testHardCPU()] (1 ms)</li><li>com.l13gr03.pets.model.game.entities.EntityTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.model.game.entities.EntityTest]/[method:testLavaLurker()] (1 ms)</li><li>com.l13gr03.pets.utils.calculator.CalculatorTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.utils.calculator.CalculatorTest]/[method:testSpecialDamageCalculator()] (0 ms)</li>
 </ul>
 
 <br/>
