--- a/reports/pit/com.l13gr03.pets.model.game.entities.species/ShadowSpecter.java.html
+++ b/reports/pit/com.l13gr03.pets.model.game.entities.species/ShadowSpecter.java.html
@@ -677,7 +677,7 @@
 
 <h2>Tests examined</h2>
 <ul>
-<li>com.l13gr03.pets.model.game.entities.EntityTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.model.game.entities.EntityTest]/[method:testShadowSpecter()] (1 ms)</li><li>com.l13gr03.pets.model.CPU.CPUTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.model.CPU.CPUTest]/[method:testMediumCPU()] (26 ms)</li><li>com.l13gr03.pets.model.CPU.CPUTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.model.CPU.CPUTest]/[method:testCPU()] (3 ms)</li>
+<li>com.l13gr03.pets.model.game.entities.EntityTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.model.game.entities.EntityTest]/[method:testShadowSpecter()] (1 ms)</li><li>com.l13gr03.pets.model.CPU.CPUTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.model.CPU.CPUTest]/[method:testMediumCPU()] (14 ms)</li><li>com.l13gr03.pets.model.CPU.CPUTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.model.CPU.CPUTest]/[method:testCPU()] (2 ms)</li><li>com.l13gr03.pets.model.CPU.CPUTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.model.CPU.CPUTest]/[method:testHardCPU()] (1 ms)</li>
 </ul>
 
 <br/>
